# mflash-core

./: .gitignore  Cargo.toml  README.md  build.rs
dumb_deck/: deck.json
dumb_deck/images/: readme.txt
proto/: mflash-v4.proto
src/: importer.rs  lib.rs  main.rs
